--- a/requirements.txt
+++ b/requirements.txt
@@ -15,14 +15,19 @@ itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.2
 packaging==23.0
+payu-python==0.1.5
+payu-sdk==1.2.0
+Pillow==9.4.0
 psycopg2-binary==2.9.5
 PyJWT==2.6.0
 python-decouple==3.7
+python-http-client==3.3.7
 pytz==2022.7.1
 requests==2.28.2
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
+sendgrid==6.10.0
 sqlparse==0.4.3
+starkbank-ecdsa==2.2.0
 uritemplate==4.1.1
 urllib3==1.26.14
-bernardnamangala@gmail.com
